Updates to get lintTesting inline with current status